# ChangeLog for dev-util/geany
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/geany/ChangeLog,v 1.15 2008/07/17 18:44:49 aballier Exp $

  17 Jul 2008; Alexis Ballier <aballier@gentoo.org> geany-0.14.ebuild:
  keyword ~x86-fbsd, thanks to Davide Italiano <dav_it@gentoo.org>, bug
  #232018

*geany-0.14 (24 Apr 2008)

  24 Apr 2008; Samuli Suominen <drac@gentoo.org> +geany-0.14.ebuild:
  Version bump.

  23 Apr 2008; Markus Meier <maekke@gentoo.org> -geany-0.12.ebuild,
  geany-0.13.ebuild:
  x86 stable and remove old, bug #218563

  20 Apr 2008; Samuli Suominen <drac@gentoo.org> geany-0.13.ebuild:
  amd64 stable wrt #218563, thanks to Víctor Enríquez for testing.

  20 Apr 2008; nixnut <nixnut@gentoo.org> geany-0.13.ebuild:
  Stable on ppc wrt bug 218563

*geany-0.13 (26 Feb 2008)

  26 Feb 2008; Samuli Suominen <drac@gentoo.org> -geany-0.11.ebuild,
  +geany-0.13.ebuild:
  Version bump wrt #211110, thanks to Michele Beltrame for reporting. Stop
  pointing to license directory in portdir wrt #211534, thanks to Bo Ørsted
  Andresen.

  21 Jan 2008; Markus Meier <maekke@gentoo.org> geany-0.12.ebuild:
  x86 stable, bug #206784

  20 Jan 2008; Samuli Suominen <drac@gentoo.org> geany-0.12.ebuild:
  Fix test suite and mark amd64 stable wrt #206784.

*geany-0.12 (14 Oct 2007)

  14 Oct 2007; Samuli Suominen <drac@gentoo.org> +geany-0.12.ebuild:
  Version bump.

  02 Sep 2007; nixnut <nixnut@gentoo.org> geany-0.11.ebuild:
  Added ~ppc wrt bug 188105

  03 Aug 2007; Raúl Porcel <armin76@gentoo.org> geany-0.11.ebuild:
  x86 stable

  20 Jun 2007; Christoph Mende <angelos@gentoo.org> geany-0.11.ebuild:
  Added ~amd64 wrt bug 182682

  20 Jun 2007; Samuli Suominen <drac@gentoo.org> metadata.xml:
  Add longdescription with french translation by Mathieu Bonnet.

*geany-0.11 (19 Jun 2007)

  19 Jun 2007; Samuli Suominen <drac@gentoo.org> +geany-0.11.ebuild: