@@ -1,6 +1,8 @@
 DIST geany-0.13.tar.bz2 2052311 RMD160 286c0e53178dfe2bd3312618284f991f54ad9042 SHA1 9e7bb16fede8850a621393299108d64a15cf2f9c SHA256 cf75505392ea81f256a380a4c249d15325c290fabac95b4584b0f66af432a9a1
 DIST geany-0.14.tar.bz2 2120062 RMD160 e4de66b211e54e01de624a7b3a3a3687f1d4b1ba SHA1 e891e3ff029c118211b2b18c77d3a3356b9851a5 SHA256 619d59b339e1be7687058460c105b8f2d4f00e6409e4450dee385e3086fdf6d7
+DIST geany-0.15.tar.bz2 2269527 RMD160 ebf8033cd71a702fd736da1009e6b5da186da904 SHA1 927aa317eb94495bd25b28a1e330fbbb8c60a81a SHA256 dbc3a204329a40a86294aa8c5ff3c9007808aa3db17f89dfc102056aa1c7367d
 EBUILD geany-0.13.ebuild 1159 RMD160 4f58e7950f6a6df18486c194a1b2f1eb64740026 SHA1 9a5d55f57a677d215a0bf7dde550bd1fd49f8ab5 SHA256 b249429a3104776cd714dd74d3f273345d531f5fc4f3ad166ebd65c0686a7167
 EBUILD geany-0.14.ebuild 1198 RMD160 2a610e42de0b5e4004935542257ca77a8db7038b SHA1 0fb8fe08cc8b5bb16a6dadf1a6ac32eb49b9cfa8 SHA256 d777a9cdd4f0577a776516aa7b9a01c2d3502a8d17bdcebf365c61c2851ae250
-MISC ChangeLog 2098 RMD160 9760792bd3e517af20f3091d40844f2552de8563 SHA1 3537342e684133389b0f8aa8d9d1ead8209241c4 SHA256 0383c977dff045a54c0a2fc94da7f38f3068d0e835b0c56efde2672899690e34
+EBUILD geany-0.15.ebuild 1198 RMD160 e5c4c7f20af1b7de7f148a0fde4e5cffa153e55b SHA1 92bfaaf06bd57c5ddaff946a78a5e9341d9c6cf0 SHA256 d3ecb557c800194bfa0921f26f655843ed750d451eb2463ce7cbc8c7154784f2
+MISC ChangeLog 2251 RMD160 10f2480ee53c7af976f8be3217c08f36b1369212 SHA1 6577f3d246eb97d3b76b02106dffc1b16eb45f4d SHA256 3f8046d21e3db74d8a81f0ed69ef525f32ee6706ff0ce4246e65a7a9a5823630
 MISC metadata.xml 1940 RMD160 7fee51b199f30475b69df6c72bc98e3fa49071c2 SHA1 1b082e644767a4ea60b3e0e7d5f94003cf9fdbc0 SHA256 34c8942144afd00373aa58a74b863e285406266660147995d9d830f61d553100
