@@ -1,6 +1,11 @@
 # ChangeLog for dev-util/geany
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/geany/ChangeLog,v 1.15 2008/07/17 18:44:49 aballier Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/geany/ChangeLog,v 1.16 2008/11/21 23:19:41 loki_val Exp $
+
+*geany-0.15 (21 Nov 2008)
+
+  21 Nov 2008; Peter Alfredsen <loki_val@gentoo.org> +geany-0.15.ebuild:
+  Bump geany to 0.15 for drac. Bug drac about bugs.
 
   17 Jul 2008; Alexis Ballier <aballier@gentoo.org> geany-0.14.ebuild:
   keyword ~x86-fbsd, thanks to Davide Italiano <dav_it@gentoo.org>, bug
